Modif ( 27-Jan-2002)
	* Added Install file
	* Added the list of the platforms on which tparse has been compiled ( compile farm of sourceforge.)
	* Added lots of little variable ( __version__, etc...)
Modif ( 25-Jan-2002)
	* renamed module as tparse
	* wrote distutils Setup.py
	* added inline (__doc__) documentation in python module.
	
Modif ( 24-Jan-2002)
	* Implementation of the python exceptions in the C++ code.	
	* Added an exception to stop the parser.
	* Fixed bug that added a "@" in the end of string in certain cases.
	
Modif ( 21-Jan-2002)
	* Extensive testing of the memory leaks
	* Started to write the python wrapper. (tparsemodule.cpp & tparsemodule.h)

Creation ( 20-Jan-2002 )
	* Implementation of the Token parser in C++ ( tparse.cpp & tparse.h)
	* Implementation of the parser itself in C++